<resources>

    <!--region all -->
    <string name="app_name">مزار</string>
    <string name="all_timer_style">%02d:%02d</string>
    <!--endregion -->

    <!-- region login-->
    <string name="login_start">ورود / ثبت نام</string>
    <string name="login_register">ثبت نام</string>
    <string name="login_slash">/</string>
    <string name="login_start_description">شماره موبایل خود را وارد کنید</string>
    <string name="login_start_button">ارسال کد تایید</string>
    <string name="login_rules_description">با ورود و ثبت نام در مزار ، شما قوانین حریم خصوصی مزار را میپذیرید</string>
    <!-- endregion -->
    <string name="salavat">الّلهُمَّ صَلِّ عَلَی مُحَمَّدٍ وَ آلِ مُحَمَّدٍ و عَجّل فَرَجَهم</string>
    <string name="ill">اللّهُمَّ اشْفِ كُلَّ مَرِیضٍ</string>
    <!-- region sign In-->
    <string name="signIn_title">رمز عبور را وارد کنید</string>
    <string name="signIn_start_description">رمز عبور حساب کاربری خود را وارد کنید</string>
    <string name="signIn_password_recovery">بازیابی رمز عبور > </string>
    <string name="signIn_entry_with_verification"> ورود با رمز یک بار مصرف > </string>
    <string name="signIn_continue">ادامه</string>
    <!-- endregion -->

    <!-- region verification-->
    <string name="verification_title">کد تایید را وارد کنید</string>
    <string name="verification_start_description">کد تایید برای شماره موبایل شما ارسال گردیده لطفا تا دریافت آن صبر کنید.</string>
    <string name="verification_inter_with_password">ورود با رمز عبور > </string>
    <string name="verification_continue">ادامه</string>
    <string name="verification_send_me_again">ارسال مجدد کد</string>

    <!-- endregion -->
    <string name="charity_type_title">آیا می خواهید به نیت ایشان %1$s</string>
    <string name="bioTitle"></string>
    <string name="charity_msg">کمک هایی که دریافت کرده اید</string>
    <string name="help_to_charity_centers">کمک به مراکز خیریه به نیت مرحوم</string>
    <string name="spiritual_affairs_msg">انجام امور معنوی به نیت مرحوم</string>
    <string name="msg_edit_deceased_profile">صفحه متوفی</string>
    <string name="msg_edit_image">تغییر عکس</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="msg_open_map">نقشه</string>
    <string name="msg_submit_location">ثبت</string>
    <string name="msg_edit_profile">پروفایل</string>
    <string name="tv_txt_birthday">تاریخ تولد :</string>
    <string name="tv_txt_deathday">تاریخ وفات :</string>
    <string name="msg_add_image">افزودن عکس</string>
    <string name="msg_add_image_user">افزودن عکس</string>
    <string name="msg_contact_toolbar">خویشان و نزدیکان</string>
    <string name="text_hint_add_friends">شماره موبایل  مورد نظر را وارد کنید</string>
    <string name="msg_inbox">صندوق پیام</string>
    <string name="enter_pray_txt">ثبت درخواست</string>
    <string name="accept_msg_dialog">تایید</string>
    <string name="close_msg_dialog">لغو</string>
    <string name="msg_title_news">اخبار</string>
    <string name="msg_force_update">
        <br>
             نسخه جدید مزار در دسترس میباشد
        </br>
        <br>
             لطفا برای ادامه کار آنرا دریافت کنید.
        </br>
    </string>
    <string name="msg_update">
        <br>
             نسخه جدید مزار در دسترس میباشد
        </br>
        <br>
             میتوانید آنرا دریافت کنید.
        </br>
    </string>
    <string name="report">گزارش تخلف</string>

    <string-array name="list_pray_type">
        <item>فرستادن صلوات</item>
        <item>ختم قرآن</item>
        <item>نیاز مالی</item>
    </string-array>

    <string-array name="list_access_type">
        <item>عمومی</item>
        <item>نیمه خصوصی</item>
        <item>خصوصی</item>
    </string-array>

    <string name="rules">
        سیاست حفظ اطلاعات و حریم خصوصی کاربران در مزار
مزار تاکید بسیاری بر اصول حفظ اطلاعات و حریم خصوصی کاربران خود دارد. این سند شامل توضیحی درباره اطلاعات خصوصی و نحوه استفاده از این اطلاعات است که  مزار از کاربران سایت جمع آوری می کند. این اطلاعات شامل مواردی است که مخصوص هر کاربر بوده و به کمک آن ها می توان کاربران  مزار را به صورت منحصر به فرد شناسایی نمود. برای نمونه می توان به نام، نشانی، نشانی الکترونیک (ایمیل)، شماره تلفن و سایر اطلاعاتی که به صورت عادی در دسترس عموم مردم نیست اشاره نمود.
اطلاعات جمع آوری شده و نحوه استفاده از آن ها
شما با ثبت نام در مزار مشخصات خود از قبیل نام و نام خانوادگی٬ ایمیل و … را در اختیار ما قرار می دهید. در ادامه فعالیت در  مزار و ثبت یک صفحه٬ شما نیاز به اضافه کردن مشخصات متوفی  خواهید داشت.
شما پس از ورود به مزار،  به عنوان کاربر آن شناخته خواهید شد و کلیه اطلاعات مذکور و اطلاعاتی مانند شماره تلفن و اطلاعات فردی شما در اختیار  مزار خواهد بود. لازم به ذکر است که این موارد تنها موارد مورد استفاده در مزارنخواهد بود.
مزار اجاره نخواهد داد اطلاعات شما در اختیار دیگران قرار گیرد بجز در مواردی که شما از قوانین منعکس شده در بخش شرایط و ضوابط تخطی نموده و شاکی نسبت به عملکرد شما وجود داشته باشد.
ویرایش و تغییر اطلاعات شخصی
شما می توانید کلیه اطلاعات شخصی خود را در بخش مربوط به حساب من تغییر داده و ویرایش کنید. این اطلاعات شامل کلیه اطلاعاتی است که شما در اپلیکیشن مزار وارد کرده اید. حساب شما توسط شما قابل حذف شدن از سیستم نمی باشد و تنها توسط مدیریت امکانپذیر است.
محدودیت دسترسی به اطلاعات
مزار دسترسی کارمندان خود به اطلاعات کاربران را محدود نموده و تنها کارمندانی که ارتباط مستقیم با کاربران دارند٬ دسترسی به کلیه اطلاعات خواهند داشت.
    </string>
    <string name="rule">قوانین</string>

</resources>