<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.authentication.LoginFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/signInCv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/all_xlarge_space"
        android:layout_marginEnd="@dimen/all_xlarge_space"
        android:background="@drawable/shape_login_card_view_border"
        app:cardCornerRadius="@dimen/radius_login_card_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/signInBack"
                android:layout_width="@dimen/size_signIn_back"
                android:layout_height="@dimen/size_signIn_back"
                android:layout_marginEnd="@dimen/all_xlarge_space"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/signInLogo" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/signInLogo"
                android:layout_width="@dimen/size_login_logo"
                android:layout_height="@dimen/size_login_logo"
                android:layout_marginTop="@dimen/all_xlarge_space"
                android:src="@drawable/sample_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signInTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_xlarge_space"
                android:layout_marginEnd="@dimen/all_xlarge_space"
                android:text="@string/verification_title"
                android:textColor="@color/grey_900"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInLogo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signInStartDescriptionTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/all_xlarge_space"
                android:layout_marginTop="@dimen/all_xlarge_space"
                android:layout_marginEnd="@dimen/all_xlarge_space"
                android:text="@string/verification_start_description"
                android:textColor="@color/grey_900"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInTitleTv" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signInPasswordLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/all_xlarge_space"
                android:layout_marginTop="@dimen/all_medium_space"
                android:layout_marginEnd="@dimen/all_xlarge_space"
                android:background="@android:color/transparent"
                app:boxBackgroundMode="none"
                android:layoutDirection="rtl"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@color/blue_grey_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInStartDescriptionTv"
             >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPhoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/all_small_space"
                    android:gravity="end"
                    android:background="@drawable/shape_login_edit_text_phone_number"
                    android:paddingTop="@dimen/padding_top_phone_email_entry_et"
                    android:paddingEnd="@dimen/all_small_space"
                    android:textColor="@color/grey_600"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/signInVerificationTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_xlarge_space"
                android:text="@string/verification_inter_with_password"
                android:textColor="@color/purple_300"
                app:layout_constraintEnd_toEndOf="@+id/signInPasswordLayout"
                app:layout_constraintTop_toBottomOf="@+id/signInPasswordLayout" />

            <TextView
                android:id="@+id/signInRecoveryTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColor="@color/purple_300"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInVerificationTv" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/signInEnterTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_medium_space"
                android:layout_marginBottom="@dimen/all_xlarge_space"
                android:background="@drawable/shape_login_start_button"
                android:gravity="center"
                android:paddingTop="@dimen/padding_top_entry_btn"
                android:paddingBottom="@dimen/padding_bottom_entry_btn"
                android:text="@string/verification_continue"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_login_enter_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/signInPasswordLayout"
                app:layout_constraintStart_toStartOf="@+id/signInPasswordLayout"
                app:layout_constraintTop_toBottomOf="@+id/signInRecoveryTv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>