<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loadingSavePofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BtnExitDeceasedPage"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BtnSaveEdit"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:background="@drawable/done"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias=".95"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_edit_deceased_profile"
                android:fontFamily="@font/iran_sans_bold"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loadingImg"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/IvDeceased"
        app:layout_constraintEnd_toEndOf="@+id/IvDeceased"
        app:layout_constraintStart_toStartOf="@+id/IvDeceased"
        app:layout_constraintTop_toTopOf="@+id/IvDeceased" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/IvDeceased"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/add_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/TvChangeImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_edit_image"
        android:fontFamily="@font/iran_sans"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/tradewind"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/IvDeceased"
        app:layout_constraintStart_toStartOf="@+id/IvDeceased"
        app:layout_constraintTop_toBottomOf="@+id/IvDeceased"
        app:layout_constraintVertical_bias=".02" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:hint=" نام و نام خانوادگی"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvChangeImg"
        app:layout_constraintVertical_bias=".05"
        tools:layout_editor_absoluteX="10dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ETNameDeceased"
            android:background="@color/white"
            android:fontFamily="@font/iran_sans_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:hint=" تاریخ تولد"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias=".01">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/EtBirthDateDeceased"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/iran_sans_light"

            android:layout_gravity="right"
            android:focusableInTouchMode="false"
            android:gravity="right" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:hint=" تاریخ وفات"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias=".01">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ETDeathDeceased"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/iran_sans_light"

            android:layout_gravity="right"
            android:focusableInTouchMode="false"
            android:gravity="right" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:hint="جزئیات(ردیف،قطعه...)"
        app:layout_constraintBottom_toBottomOf="@+id/BtnOpenMap"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
        app:layout_constraintStart_toEndOf="@+id/BtnOpenMap"
        app:layout_constraintTop_toTopOf="@+id/BtnOpenMap">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ETBurialLocation"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/iran_sans_light"

            android:layout_height="match_parent"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BtnOpenMap"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/follow_button"
        android:text="@string/msg_open_map"
        android:fontFamily="@font/iran_sans"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintVertical_bias="0.044" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="بیوگرافی"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnOpenMap"
        app:layout_constraintVertical_bias=".05">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ETdeceasedDescription"
            android:background="@color/white"
            android:fontFamily="@font/iran_sans_light"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>